--- a/catalog/templates/catalog/BookInstance/bookinstance_detail.html
+++ b/catalog/templates/catalog/BookInstance/bookinstance_detail.html
@@ -1,4 +1,7 @@
 <h1>BookInstance </h1>
     <ul>
-        <li>estado del libro : {{book_instance_detail}}</li>
+        <h2>libro :</h2> 
+        <p>{{bookinstance_detail.book}}</p>
+        <h2>estado del libro :</h2> 
+        <p>{{bookinstance_detail.status}}</p>
     </ul>
