--- a/catalog/templates/catalog/BookInstance/bookinstance_list.html
+++ b/catalog/templates/catalog/BookInstance/bookinstance_list.html
@@ -1,7 +1,7 @@
 {% block content  %}
-{%if book_instance_list%}
-    {% for book_instance in book_instance_list%}
-        <li><a href="{{book_instance.get_absolute_url}}">{{book_instance.status}}</a></li>
+{%if bookinstance_list%}
+    {% for bookinstance in bookinstance_list%}
+        <li><a href="{{bookinstance.get_absolute_url}}">{{bookinstance.status}}</a></li>
     {%endfor%}
 {%endif%}
 {% endblock content  %}
