--- a/catalog/templates/catalog/Genre/genre_list.html
+++ b/catalog/templates/catalog/Genre/genre_list.html
@@ -1,7 +1,7 @@
 {% block content%}
 {% if genre_list %}
     {%for genre in genre_list%}
-        <li><a href = "{{genre.get_absolute_url}}">{{genre.status}}</a></li>
+        <li><a href = "{{genre.get_absolute_url}}">{{genre.name}}</a></li>
     {% endfor %}
 {% endif %}
 {% endblock content %}
