--- a/catalog/templates/catalog/author/author_list.html
+++ b/catalog/templates/catalog/author/author_list.html
@@ -1,7 +1,7 @@
 {% block content %}
 {% if author_list%}
     {% for author in author_list%}
-        <li><a href = "{{Author.get_absolute_url}}">{{author.status}}</a></list>
+        <li><a href = "{{author.get_absolute_url}}">{{author.fname}}{{author.lname}}</a></list>
     {%endfor%}
 {% endif %}
 {% endblock content %}
